--- a/config.org
+++ b/config.org
@@ -2116,6 +2116,45 @@ Create =undo= boundaries after certain key presses in =insert-mode=.
   (setq evil-snipe-scope 'whole-buffer))
 #+end_src
 
+*** Harpoon
+
+#+begin_quote
+Harpoon plugin for emacs, based on the plugin from ThePrimeagen.
+
+This plugin offers quick bookmarks separated by project and branch. You can quick navigate between your working files and forget about that files opened that you will not use anymore.
+
+Harpoon persists between emacs sessions.
+#+end_quote
+
+#+begin_src emacs-lisp :tangle packages.el
+(package! harpoon
+  :recipe (:host github :repo "otavioschwanck/harpoon.el"))
+#+end_src
+
+Define quick access keybindings.
+
+#+begin_src emacs-lisp :tangle yes
+(use-package harpoon
+  :defer t
+  :custom
+  (harpoon-separate-by-branch t)
+  :init
+  (map! :leader
+        "j c" 'harpoon-clear
+        "j f" 'harpoon-toggle-file
+        "j a" 'harpoon-add-file
+        "j m" 'harpoon-toggle-quick-menu
+        "j 1" 'harpoon-go-to-1
+        "j 2" 'harpoon-go-to-2
+        "j 3" 'harpoon-go-to-3
+        "j 4" 'harpoon-go-to-4
+        "j 5" 'harpoon-go-to-5
+        "j 6" 'harpoon-go-to-6
+        "j 7" 'harpoon-go-to-7
+        "j 8" 'harpoon-go-to-8
+        "j 9" 'harpoon-go-to-9))
+#+end_src
+
 *** Hydra
 
 Let's make the =hydra= module's functions easily accessible:
