feat(evil-mc): Documented new keybinds

--- a/config.org
+++ b/config.org
@@ -795,6 +795,10 @@ Keybindings
 | =gzp=        | evil-mc-make-and-goto-prev-cursor                    |
 | =gzP=        | evil-mc-make-and-goto-first-cursor                   |
 | =gzq=        | evil-mc-undo-all-cursors                             |
+| =gzs=        | evil-mc-skip-and-goto-next-match                     |
+| =gzS=        | evil-mc-skip-and-goto-prev-match                     |
+| =gzc=        | evil-mc-skip-and-goto-next-cursor                    |
+| =gzC=        | evil-mc-skip-and-goto-prev-cursor                    |
 | =gzt=        | +multiple-cursors/evil-mc-toggle-cursors             |
 | =gzu=        | +multiple-cursors/evil-mc-undo-cursor                |
 | =gzz=        | +multiple-cursors/evil-mc-toggle-cursor-here         |
