--- a/config.org
+++ b/config.org
@@ -3388,7 +3388,7 @@ sometimes. ~+word-wrap-mode~ helps to make these files more readable without
 changing the buffer contents.
 
 #+begin_src emacs-lisp :tangle yes
-(add-hook! 'doom-first-first-buffer #'+global-word-wrap-mode)
+(add-hook! 'doom-first-buffer-hook #'+global-word-wrap-mode)
 #+end_src
 
 *** World Clock
