--- a/config.org
+++ b/config.org
@@ -3279,14 +3279,16 @@ We create a =blacklist= of sorts to deactivate ~topspace-mode~ in special modes.
 #+begin_src emacs-lisp :tangle yes
 (after! topspace
   (defun dan/topspace--active-p ()
-    (not (and (minibufferp)
-              (memq major-mode
-                    '(vterm-mode
-                      org-agenda-mode
-                      +doom-dashboard-mode
-                      pdf-view-mode
-                      telega-root-mode
-                      telega-chat-mode))))))
+    (not (or (minibufferp)
+             (memq major-mode
+                   '(vterm-mode
+                     org-agenda-mode
+                     +doom-dashboard-mode
+                     pdf-view-mode
+                     kubernetes-overview-mode
+                     magit-status-mode
+                     telega-root-mode
+                     telega-chat-mode))))))
 #+end_src
 
 *** Topsy
